--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stílus.css">
+    <link rel="stylesheet" href="style.css">
     <title>Első Honlapom</title>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="fullpage">
         <div class="content">
-            <nav id="nav"></nav>
+            <nav id="nav">
             <ul>
                 <li><img src="assets/logo.svg" alt="logo"></li>
                 <li><a class="positioning" href="#linkedin">LINKEDIN</a></li>
@@ -21,7 +21,7 @@
                 <li><a href="#nav">HOME</a></li>
             </ul>
             </nav>
-
+            <section>
             <div class="contentText">
                 <h1>Cserey Róbert</h1>
                 <h2> Green Fox Academy Diák</h2>
@@ -30,54 +30,54 @@
                     mindig az útját állták az első lépéseknek. Most az újratervezési programnak köszönhetően végre
                     belevághatok a programozás rejtelmeibe, egy szebb jövő reményében! :)
                 </p>
-
-                <nav id="wiki">
+            </section>
+                <section id="wiki" class="wiki">
                 <p class="separator">- - -</p>
 
-                <p class="title"> Wiki</p>
-                <p class="header">Számítógép</p>
+                <h2 class="title"> Wiki</h2>
+                <h3 class="header">Logikai Kapu</h3>
                 <p class="text">Egy olyan idealizált vagy fizikai eszköz ami logikai alapmüveletet valósít meg egy vagy
                     több bináris bemeneten és produkál egy bináris kimenetet.</p>
-                <p class="header">Szabványos amerikai kód információcserére</p>
+                <h3 class="header">ASCII</h3>
                 <p class="text">As angol neve American Standard Code for Information Interchange. A számítógépek csak a
                     számokat értik, így a 'a' vagy '@' karakterek értelmezéséhez szükséges számosított értékeket írja
                     le.</p>
-                <p class="header">RAM</p>
+                <h3 class="header">RAM</h3>
                 <p class="text">Egy véletlen elérésű írható–olvasható adattároló eszköz. Tárolja a CPU által
                     végrehajtandó programokat és a feldolgozásra váró adatokat. Egy adott memóriarész elérésének
                     gyorsasága független az elhelyezkedésétől.</p>
-                <p class="header">Programozási nyelv</p>
+                <h3 class="header">Programozási nyelv</h3>
                 <p class="text">A számítástechnikában használt olyan, az ember által olvasható és értelmezhető
                     utasítások sorozata, amivel közvetlenül, vagy közvetve (például: gépi kódra fordítás után)
                     közölhetjük a számítógéppel egy adott feladat elvégzésének módját.</p>
-                <p class="header">Tartománynévrendszer</p>
+                <h3 class="header">Tartománynévrendszer</h3>
                 <p class="text">Egy hierarchikus, nagymértékben decentralizált elnevezési rendszer számítógépek,
                     szolgáltatások, illetve az internetre vagy egy magánhálózatra kötött bármilyen erőforrás számára.
                 </p>
-                <p class="header">HTTP Protokoll</p>
+                <h3 class="header">HTTP Protokoll</h3>
                 <p class="text">Egy alkalmazás protokol elosztott, együttműködő és hipermédiás információs rendszerek
                     részére. A World Wide Web adat kommunikációjának alapja. Ez az alapvető protokol a hypertext
                     cseréjére és mozgatására.</p>
-                </nav>
+                </section>
 
-                <nav id="github">
+                <section id="github" class="github">
                 <p class="separator">- - -</p>
 
-                <p class="title">GitHub</p>
-                <p class="header">GitHub, Inc</p>
+                <h2 class="title">GitHub</h2>
+                <h3 class="header">GitHub, Inc</h3>
                 <p class="text">A Git egy nyílt forráskódú, elosztott verziókezelő szoftver, vagy másképpen egy
                     szoftverforráskód-kezelő rendszer, amely a sebességre helyezi a hangsúlyt. A Gitet eredetileg Linus
                     Torvalds fejlesztette ki a Linux kernel fejlesztéséhez. Minden Git munkamásolat egy teljes értékű
                     repository teljes verziótörténettel és teljes revíziókövetési lehetőséggel, amely nem függ a hálózat
                     elérésétől vagy központi szervertől.</p>
-                <a href="https://github.com" target="blank" class="link">GitHub</a>
-                </nav>
+                <a href="https://github.com/CserkoR" target="blank" class="link">GitHub - Cserey Róbert</a>
+                </section>
 
-                <nav id="linkedin">
+                <section id="linkedin" class="linkedin">
                 <p class="separator">- - -</p>
                 
-                <p class="title">LinkedIn</p>
-                <p class="header">LinkedIn (NYSE: LNKD) </p>
+                <h2 class="title">LinkedIn</h2>
+                <h3 class="header">LinkedIn (NYSE: LNKD) </h3>
                 <p class="text">A LinkedIn a világ legnagyobb üzleti közösségi hálózata. 2002 decemberében alapították
                     és 2003. május 5-én indították el. A LinkedIn üzleti kapcsolatok létesítésére épít. 2013. július
                     29-én a LinkedIn bejelentette, hogy már több mint 238 millió tagja van (2013. május 2-án még csak
@@ -85,8 +85,8 @@
                     franciául, németül, olaszul, oroszul, portugálul, románul, törökül és tovább tíz nyelven érhető el.
                     A LinkedInt 2011. május 19-én vezették be a NYSE-re (New York-i Tőzsde New York Stock Exchange), a
                     LNKD rövidítéssel. 2016-ban a Microsoft bejelentette, hogy megveszi a LinkedIn céget.</p>
-                <a href="https://www.linkedin.com" target="blank" class="link">LinkedIn</a>
-                </nav>
+                <a href="https://www.linkedin.com/in/cserey-r%C3%B3bert-6a1a5a1ba/" target="blank" class="link">LinkedIn - Cserey Róbert</a>
+                </section>
             </div>
         </div>
     </div>
